Install git on ec2

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h1>Deployed - Hello from FastAPI in Docker on EC2!</h1>
+
+    <li>Check if git is installed</li>
 </body>
 </html>
